--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/119/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/119/index.mdx
@@ -1,17 +1,18 @@
 ---
 slug: /119
-title: "📨 #119: ..."
+title: "📨 #119: React OG Images, Tremor, Storybook, Decoupling, Rendering, Data-Fetching, Remix, Qwik, TypeScript, Playwright..."
 authors: [slorber]
 date: 10-11-2022
 image: /img/TWIR_POST.png
-draft: true
 ---
 
 Salut à tous !
 
-Une semaine avec pas mal de bons articles React. Une innovation Vercel intéressante pour la génération d'images OG.
+Une semaine avec pas mal de bons articles React assez variés. Plutôt calme coté React-Native.
 
-La [ViteConf](https://viteconf.org/) vient de commencer, il y aura sans doute quelques des annonces ;)
+Une innovation Vercel super intéressante pour la génération d'images OG.
+
+La [ViteConf](https://viteconf.org/) vient de commencer, il y aura sans doute quelques annonces ;)
 
 Je fais une [présentation Docusaurus ce vendredi avec code.gouv.fr](https://twitter.com/codegouvfr/status/1579407609643532288) (atelier BlueHats organisé par la direction interministérielle du numérique), n'hésitez pas à vous inscrire, c'est ouvert à tous.
 
@@ -56,12 +57,12 @@ Incite à découpler un maximum nos apps JavaScript du framework (React ou autre
 Tutoriel avec une section particulièrement intéressante qui explique comment automatiser la création des Storytook controls en réutilisant les types TypeScript de la librairie UI. Très utile lorsqu'on forward des props. Supporte même les helpers comme `Pick` et `Omit`.
 
 - 👤 Sathya Gunasekaran [rejoins la React core team](https://twitter.com/_gsathya/status/1578816177371250688), probablement [travailler sur le compiler React-Forget](https://twitter.com/Huxpro/status/1578865666010263552)
+- 👥 [Next.js Conf 2022 speakers](https://twitter.com/vercel/status/1578401243243741185)
 - 📖 Beta docs: [React.Children](https://twitter.com/dan_abramov/status/1578457525628047360) + [useId](https://twitter.com/dan_abramov/status/1577283961763467265) + [createElement](https://twitter.com/dan_abramov/status/1577463721193897985) + [useImperativeHandle](https://twitter.com/dan_abramov/status/1577717226269966336)
 - 📖 [Next.js on Vercel docs improvements](https://twitter.com/leeerob/status/1577788730349436928)
-- 👥 [Next.js Conf 2022 speakers](https://twitter.com/vercel/status/1578401243243741185)
 - 🌶 [React and Next.js is DEAD — Something New is (Finally) Replacing It (For Good)](https://javascript.plainenglish.io/react-and-next-js-is-dead-something-new-is-finally-replacing-it-for-good-c792c48806f6): explique en quoi le framework Qwik présente un modèle supérieur à React. Titre click-bait, mais article réellement intéressant.
 - 📜 [Build a React Custom Renderer - Part 1](https://www.markcodes.dev/posts/build-react-custom-renderer-part-1): nouvelle série qui montre comment créer un renderer React. La première partie ne gère pas encore les updates.
-- 📜 [Remix, React, and State](https://blog.jim-nielsen.com/2022/remix-react-and-state/): donne un modèle mental pour Remix qui réconcilie le state de manière end-to-end / fullstack.
+- 📜 [Remix, React, and State](https://blog.jim-nielsen.com/2022/remix-react-and-state/): donne un modèle mental pour Remix qui réconcilie le state React de manière end-to-end / fullstack.
 - 📜 [How to write your own state management library](https://judehunter.dev/blog/how-to-write-your-own-state-management-library): pour comprendre comment une librairie de state management fonctionne, et comment implémenter un système de sélecteurs.
 - 📜 [How to fetch data in React with performance in mind](https://www.developerway.com/posts/how-to-fetch-data-in-react): explique bien pourquoi le data-fetching en React n'est pas si simple qu'il n'en a l'air.
 - 📜 [Avoid impossible UI states with React, Typescript and xState](https://whereisthemouse.com/avoid-impossible-ui-states-with-react-typescript-and-xstate): les discriminated union-types de TypeScript permettent d'éviter les états impossibles, et XState permet d'éviter les transitions d'état impossibles.
@@ -90,8 +91,8 @@ Cambly, c'est la plateforme pour progresser à l'oral en anglais avec des tuteur
 - 🚧 [Expo Router 0.0.26](https://twitter.com/Baconbrix/status/1578805793733763072): [useHref / copy link](https://twitter.com/Baconbrix/status/1578176991441784833) + [Splash Screen Orchestration](https://twitter.com/Baconbrix/status/1577690073906257921)
 - 📖 [React-Native docs fully bilingual - Java + Kotlin](https://twitter.com/reactnative/status/1578332414145105921)
 - 🎨 [Reanimated - useAnimatedKeyboard() demo](https://twitter.com/swmansion/status/1579471824831725571)
-- 📦 [react-native-test-app 2.0](https://twitter.com/lord_sherlock/status/1578312268663906304)
-- 📦 [react-native-quick-sqlite 5.0](https://twitter.com/ospfranco/status/1578145916510273536)
+- 📦 [react-native-test-app 2.0](https://twitter.com/lord_sherlock/status/1578312268663906304): Expo Config plugins support
+- 📦 [react-native-quick-sqlite 5.0](https://twitter.com/ospfranco/status/1578145916510273536): promise API
 
 ---
 
@@ -126,9 +127,9 @@ Paris 75008 - 2j de TT/sem.
 
 ## 🔀 Autre {#other}
 
+- [Playwright Locators APIs inspired by Testing Library](https://twitter.com/diegohaz/status/1578567655493193728)
 - [Deno - The Future of the Web is on the Edge](https://deno.com/blog/the-future-of-web-is-on-the-edge)
 - [New patterns for amazing apps](https://web.dev/new-patterns-for-amazing-apps/)
-- [Playwright Locators APIs inspired by Testing Library](https://twitter.com/diegohaz/status/1578567655493193728)
 - [Optimize long tasks](https://web.dev/optimize-long-tasks/)
 - [Optimizing Interaction to Next Paint (INP)](https://speaking.jeremy.codes/GptKXg/optimizing-interaction-to-next-paint-inp)
 - [Cloudflare Pages gets even faster with Early Hints](https://blog.cloudflare.com/early-hints-on-cloudflare-pages/)
@@ -140,4 +141,4 @@ Paris 75008 - 2j de TT/sem.
 
 ## 🤭 Fun {#fun}
 
-[![Kent C. Dodds Twitter edit meme - Rick-Rolled](/emails/issues/119/meme.png)](https://twitter.com/kentcdodds/status/1578334293863956480/history)
+[![Kent C. Dodds Twitter edit meme - Rick Rolled](/emails/issues/119/meme.png)](https://twitter.com/kentcdodds/status/1578334293863956480/history)
