--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/119/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/119/index.mdx
@@ -18,6 +18,8 @@ Je fais une [présentation Docusaurus ce vendredi avec code.gouv.fr](https://twi
 
 <!-- truncate -->
 
+**💡 [Consulter cette newsletter sur Twitter](https://slo.im/thread) - format visuel 🎨**
+
 ---
 
 import Support from "../_support.mdx";
