--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
@@ -13,6 +13,8 @@ Salut à tous !
 
 <!-- truncate -->
 
+**💡 [Consulter cette newsletter sur Twitter](https://slo.im/thread) - format visuel 🎨**
+
 ---
 
 import Support from "../_support.mdx";
