--- a/website/newsletter/119/index.mdx
+++ b/website/newsletter/119/index.mdx
@@ -14,6 +14,8 @@ The [ViteConf](https://viteconf.org/) has just started, there will probably be s
 
 <!-- truncate -->
 
+**💡 [Check this newsletter on Twitter](https://slo.im/thread) - visual format 🎨**
+
 ---
 
 import Support from "../_support.mdx";
