--- a/website/newsletter/_template/index.mdx
+++ b/website/newsletter/_template/index.mdx
@@ -13,6 +13,8 @@ Hi everyone!
 
 <!-- truncate -->
 
+**💡 [Check this newsletter on Twitter](https://slo.im/thread) - visual format 🎨**
+
 ---
 
 import Support from "../_support.mdx";
