--- a/website/newsletter/119/index.mdx
+++ b/website/newsletter/119/index.mdx
@@ -40,7 +40,7 @@ Check out [Technology Hub](https://www.storyblok.com/technologies?utm_source=thi
 
 **[Vercel OG Image Generation: Fast, dynamic social card images at the Edge](https://vercel.com/blog/introducing-vercel-og-image-generation-fast-dynamic-social-card-images)**
 
-Vercel presents a new very efficient solution to generate dynamic social cards in Vercel Edge Functions. Practical: it is possible to use JSX, React components (stateless) and Tailwind without additional config. I recommend [this thread](https://twitter.com/shuding_/status/1579607964549513217) explaining how it all works, very interesting! They even use Yoga, the layout engine from React-Native in WASM 🤭
+Vercel presents a new very efficient solution to generate dynamic social cards in Vercel Edge Functions. Practical: it is possible to use JSX, React components (stateless) and Tailwind without additional config. I recommend [this thread](https://twitter.com/shuding_/status/1579607964549513217) explaining how it all works, very interesting! They even use Yoga, the layout engine from React-Native 🤭
 
 **[The future of rendering in React](https://prateeksurana.me/blog/future-of-rendering-in-react/)**
 
