--- a/website/newsletter/119/index.mdx
+++ b/website/newsletter/119/index.mdx
@@ -67,7 +67,7 @@ Tutorial with a particularly interesting section that explains how to automate t
 - 📜 [I changed my mind about writing new JavaScript frameworks](https://whitep4nth3r.com/blog/write-a-new-javascript-framework/): there are only 4 frameworks that support both SSG + SSR: Eleventy, Next.js, Gatsby, Redwood.
 - 📜 [How to Use Sandpack for Code Demos](https://www.ctnicholas.dev/articles/how-to-use-sandpack-for-code-demos): article [updated with the latest Sandpack features](https://twitter.com/ctnicholasdev/status/1577683748878884864), this Codesandbox tool to create live code playgrounds. Used by React beta docs, Josh Comeau...
 - 📦 [Tremor 1.0](https://www.tremor.so/): a library of React UI components to create dashboard analytics.
-- 🐦 [W3C Trusted Types + React + XSS](https://twitter.com/sebastienlorber/status/1579485631260286977): a new HTML proposal could provide a native solution to prevent XSS vulnerabilities, and perhaps eventually remove the need for `dangerouslySetInnerHTML`??
+- 🐦 [W3C Trusted Types + React + XSS](https://twitter.com/sebastienlorber/status/1579485631260286977): a new HTML proposal could provide a native solution to prevent XSS vulnerabilities, and perhaps eventually remove the need for `dangerouslySetInnerHTML`?
 
 <SubscribeFormEmbed />
 
