--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
@@ -51,7 +51,20 @@ import Support from "../_support.mdx";
 
 ## 🧑‍💻Jobs {#jobs}
 
-<Todo />
+🧑‍💼 [**Matters - Senior Software Engineer (React/Node)**](https://bit.ly/NLReactH)
+
+Envie de challenges et de contribuer à des réussites entrepreneuriales ? Rejoins notre startup studio pour construire des produits variés et complexes dans une culture devOps, une stack JS, des code reviews, tests et déploiements automatisés. Paris, remote flexible, 50K€-65K€.
+
+🧑‍💼 [**Masteos - Lead ReactJS - Hybride ou Remote - 75-90k€**](https://www.welcometothejungle.com/fr/companies/masteos/jobs/lead-front-reactjs-h-f_paris?q=97ae44f44512e0f1968e134f33de64ea&o=1376093)
+
+Masteos réinvente l’expérience de l’investissement locatif, en proposant un parcours entièrement dématérialisé et un accompagnement de haut niveau aux particuliers qui souhaitent acheter un bien pour le louer.
+
+🧑‍💼 [**Linxea - Lead Dev React.js - 60-75k€**](https://www.welcometothejungle.com/fr/companies/linxea/jobs/lead-dev-react_paris)
+
+Plateforme leader de l’épargne en ligne.
+Stack tech : ReactJS, Redux, Saga, Formik, Storybook, Webpack, Typescript.
+Skills : architecture, développement, pratiques craft (clean architecture, clean code ,TDD), mentoring et formation des équipes.
+Paris 75008 - 2j de TT/sem.
 
 💡 [Comment publier une offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
 
