--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
@@ -25,9 +25,17 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+[![Sizzy - le navigateur pour les développeurs](/emails/issues/220/sizzy.jpg)](https://sizzy.co/?utm_campaign=newsletter&utm_source=thisweekinreact)
 
----
+Les professionnels de tous les autres secteurs d'activité disposent d'outils spécialisés, mais que les développeurs Web sont toujours obligés d'utiliser le navigateur que leur grand-mère utilise pour faire ses achats sur Amazon ?
+
+Si vous ouvrez localhost:3000 dans un autre navigateur que Sizzy, vous perdez des heures de votre temps précieux.
+
+**Avant Sizzy:** le développement web vous stresse, le responsive design est difficile, vous avez une quantité écrasante d'onglets et d'applications ouverts.
+
+**Après Sizzy:** tous les outils dont vous avez besoin sont au même endroit, le responsive design est un jeu d'enfant, plus de changement de contexte.
+
+Vous pouvez le [télécharger ici](https://sizzy.co/?utm_campaign=newsletter&utm_source=thisweekinreact) et l'essayer gratuitement pendant 14 jours !
 
 ## ⚛️ React {#react}
 
