--- a/website/newsletter/220/index.mdx
+++ b/website/newsletter/220/index.mdx
@@ -25,7 +25,17 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+[![Sizzy - the browser for developers](/emails/issues/220/sizzy.jpg)](https://sizzy.co/?utm_campaign=newsletter&utm_source=thisweekinreact)
+
+How come professionals in every other industry have specialized tools, but web developers are still stuck using the browser that their grandma is using for shopping on Amazon?
+
+If you're opening localhost:3000 in any other browser except Sizzy, you're wasting hours of your precious time.
+
+**Before Sizzy:** web development is stressing you out, responsive design is hard, you have an overwhelming amount of opened tabs and apps.
+
+**After Sizzy:** all the tools you need are in one place, responsive design is a breeze, no more context switching.
+
+You can [download it here](https://sizzy.co/?utm_campaign=newsletter&utm_source=thisweekinreact) and try it for free for 14 days!
 
 ---
 
