--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
@@ -9,7 +9,11 @@ draft: true
 
 Salut à tous !
 
-<Todo />
+Prez Docusaurus
+https://communs.numerique.gouv.fr/ateliers/docusaurus/
+
+JsParty
+https://changelog.com/jsparty/247
 
 <!-- truncate -->
 
@@ -39,7 +43,27 @@ Vous pouvez le [télécharger ici](https://sizzy.co/?utm_campaign=newsletter&utm
 
 ## ⚛️ React {#react}
 
-<Todo />
+[React RFC: First class support for promises and async/await](https://github.com/reactjs/rfcs/pull/229)
+
+[intégration tRPC](https://twitter.com/alexdotjs/status/1581932629623857153)
+
+[call useContext conditionally](https://twitter.com/acdlite/status/1581401077915975680)
+
+[They Fixed React ?](https://www.youtube.com/watch?v=iOpTdwf96NQ)
+
+[The Web’s Next Transition](https://www.epicweb.dev/the-webs-next-transition)
+
+[Storybook - First-class Vite support](https://storybook.js.org/blog/first-class-vite-support-in-storybook/)
+
+v7 pre-release? https://twitter.com/IanVanSchooten/status/1579884486820782080
+
+[A World-Class Code Playground with Sandpack](https://www.joshwcomeau.com/react/next-level-playground/)
+
+- [Docusaurus 2 is a pretty big deal](https://changelog.com/jsparty/247)
+
+- [Planby - React.js based component for schedules and timelines](https://planby.netlify.app/)
+
+- [In Defense of useEffect](https://www.youtube.com/watch?v=Zw4lJqBphvA)
 
 <SubscribeFormEmbed />
 
@@ -53,7 +77,15 @@ Vous pouvez le [télécharger ici](https://sizzy.co/?utm_campaign=newsletter&utm
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[2022: How can we improve React Native?](https://github.com/react-native-community/discussions-and-proposals/discussions/528)
+
+https://twitter.com/reactnative/status/1581313958836809729
+
+- [Metro 0.73.0](https://github.com/facebook/metro/releases/tag/v0.73.0)
+- [React-Native Flex gap support coming?](https://twitter.com/Baconbrix/status/1580587087174062080)
+- [Expo Router 0.0.27](https://twitter.com/Baconbrix/status/1579912795323215872) + https://twitter.com/Baconbrix/status/1579867430775848964
+
+Expo doc: https://twitter.com/amanhimself/status/1580615698321399811
 
 ---
 
@@ -90,10 +122,31 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+[StackBlitz Codeflow](https://stackblitz.com/codeflow)
+
+https://twitter.com/stackblitz/status/1579877383716319233
+
+https://thenewstack.io/stackblitz-launches-codeflow-and-announces-figma-investment/
+
+[One-click treat for Open Source maintainers](https://dev.to/stackblitz/one-click-treat-for-open-source-maintainers-49f7)
+
+Node 18.11
+
+https://twitter.com/simonplend/status/1580515663638142979
+
+https://twitter.com/matteocollina/status/1580911016506163202
+
+- [Fontaine - Automatic font fallback based on font metrics](https://github.com/unjs/fontaine) + https://twitter.com/danielcroe/status/1581428654479138817
+- [Obsidian 1.0](https://obsidian.md/1.0)
+- [rRPC-chrome - tRPC adapter for Web Extensions](https://github.com/jlalmes/trpc-chrome)
+- [Status update of my tsc port](https://kdy1.dev/posts/2022/10/tsc-port-status)
+- [Lerna reborn — What’s new in v6?](https://blog.nrwl.io/lerna-reborn-whats-new-in-v6-10aec6e9091c)
+- [JetBrains Fleet - Public Preview](https://blog.jetbrains.com/fleet/2022/10/introducing-the-fleet-public-preview/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/manucorporat/status/1580191113352470528
+
+https://twitter.com/olafurw/status/1578704185809244160
