--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
@@ -71,7 +71,21 @@ v7 pre-release? https://twitter.com/IanVanSchooten/status/1579884486820782080
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+[![premier octet - Agence de développement React](/emails/issues/220/premieroctet.jpg)](https://sizzy.co/?utm_campaign=newsletter&utm_source=thisweekinreact)
+
+**[Premier Octet - Agence de développement React](https://premieroctet.com/)**
+
+Premier Octet est une agence de développement d'applications web et mobile. Depuis 2008, nous accompagnons de nombreux clients grâce à notre expertise en **React et React Native**.
+
+Plus concrètement, nous intervenons en développement, conseil, audit ou formation, sur des thématiques JavaScript serveur et front. Nos projets embarquent des technologies open source telles que :
+
+- Next.js
+- Nest.js
+- ChakraUI
+- NativeBase
+- Strapi
+
+N'hésitez pas à aller voir notre site [premieroctet.com](https://premieroctet.com/) pour plus d'informations !
 
 ---
 
