--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
@@ -71,9 +71,9 @@ v7 pre-release? https://twitter.com/IanVanSchooten/status/1579884486820782080
 
 ## 💸 Sponsor {#sponsor2}
 
-[![premier octet - Agence de développement React](/emails/issues/220/premieroctet.jpg)](https://sizzy.co/?utm_campaign=newsletter&utm_source=thisweekinreact)
+[![premier octet - Agence de développement React](/emails/issues/220/premieroctet.jpg)](https://www.premieroctet.com/?utm_source=react_hebdo)
 
-**[Premier Octet - Agence de développement React](https://premieroctet.com/)**
+**[Premier Octet - Agence de développement React](https://www.premieroctet.com/?utm_source=react_hebdo)**
 
 Premier Octet est une agence de développement d'applications web et mobile. Depuis 2008, nous accompagnons de nombreux clients grâce à notre expertise en **React et React Native**.
 
@@ -85,7 +85,7 @@ Plus concrètement, nous intervenons en développement, conseil, audit ou format
 - NativeBase
 - Strapi
 
-N'hésitez pas à aller voir notre site [premieroctet.com](https://premieroctet.com/) pour plus d'informations !
+N'hésitez pas à aller voir notre site [premieroctet.com](https://www.premieroctet.com/?utm_source=react_hebdo) pour plus d'informations !
 
 ---
 
@@ -156,6 +156,7 @@ https://twitter.com/matteocollina/status/1580911016506163202
 - [Status update of my tsc port](https://kdy1.dev/posts/2022/10/tsc-port-status)
 - [Lerna reborn — What’s new in v6?](https://blog.nrwl.io/lerna-reborn-whats-new-in-v6-10aec6e9091c)
 - [JetBrains Fleet - Public Preview](https://blog.jetbrains.com/fleet/2022/10/introducing-the-fleet-public-preview/)
+- [Import maps soon available in all browsers](https://twitter.com/sebastienlorber/status/1582024272788480000)
 
 ---
 
