--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
@@ -45,6 +45,12 @@ Vous pouvez le [télécharger ici](https://sizzy.co/?utm_campaign=newsletter&utm
 
 [React RFC: First class support for promises and async/await](https://github.com/reactjs/rfcs/pull/229)
 
+- Remix naive: https://twitter.com/ebey_jacob/status/1581548418039963648
+
+- Ryan carniato https://twitter.com/RyanCarniato/status/1581155827091578880
+
+- Devon: https://twitter.com/devongovett/status/1581146015486291969
+
 [intégration tRPC](https://twitter.com/alexdotjs/status/1581932629623857153)
 
 [call useContext conditionally](https://twitter.com/acdlite/status/1581401077915975680)
@@ -53,17 +59,41 @@ Vous pouvez le [télécharger ici](https://sizzy.co/?utm_campaign=newsletter&utm
 
 [The Web’s Next Transition](https://www.epicweb.dev/the-webs-next-transition)
 
+https://twitter.com/kentcdodds/status/1580395678479814656
+
 [Storybook - First-class Vite support](https://storybook.js.org/blog/first-class-vite-support-in-storybook/)
 
 v7 pre-release? https://twitter.com/IanVanSchooten/status/1579884486820782080
 
+https://twitter.com/storybookjs/status/1580578832553488384
+
+https://twitter.com/storybookjs/status/1580579898896584704
+
 [A World-Class Code Playground with Sandpack](https://www.joshwcomeau.com/react/next-level-playground/)
+
+[Lazy-load React components in Remix](https://sergiodxa.com/articles/lazy-load-react-components-in-remix)
+
+[Gatsby v5 beta?](https://twitter.com/GatsbyJS/status/1580288285229735936)
+
+- [Streaming: is it worth it?](https://www.builder.io/blog/streaming-is-it-worth-it)
 
 - [Docusaurus 2 is a pretty big deal](https://changelog.com/jsparty/247)
 
 - [Planby - React.js based component for schedules and timelines](https://planby.netlify.app/)
 
 - [In Defense of useEffect](https://www.youtube.com/watch?v=Zw4lJqBphvA)
+
+- [Streaming SSR in Preact prototype](https://twitter.com/marvinhagemeist/status/1581762567328104448)
+
+- [Satori + React-Three-Fiber demo](https://twitter.com/0xca0a/status/1581751380339232768) - [Satori + SVG code block syntax highlighting](https://twitter.com/shuding_/status/1581358324569645056)
+
+- [Moving From React to htmx](https://htmx.org/essays/a-real-world-react-to-htmx-port/) + https://twitter.com/htmx_org/status/1581316329818099712 + https://twitter.com/hn_frontpage/status/1581828152548282368
+
+- [Create a 3D site with Game Controls in Spline and React](https://designcode.io/spline2) ([video](https://www.youtube.com/watch?v=uYp_ipIasYE))
+
+- [Astro 1.5](https://twitter.com/astrodotbuild/status/1580611193429168129)
+
+https://twitter.com/DavidKPiano/status/1580179833052876800 ?
 
 <SubscribeFormEmbed />
 
@@ -101,6 +131,12 @@ https://twitter.com/reactnative/status/1581313958836809729
 
 Expo doc: https://twitter.com/amanhimself/status/1580615698321399811
 
+- [React-Native Bottom Sheet v5 will have web support](https://twitter.com/gorhom/status/1581334529121218561)
+- [RNR 248 - Introducing Ignite v8: Maverick!](https://reactnativeradio.com/episodes/rnr-248-introducing-ignite-v8-maverick)
+- [React-Native 0.70.3](https://twitter.com/Kelset/status/1580210635266084864)
+
+https://twitter.com/mironcatalin/status/1580111626430468097
+
 ---
 
 ## 🧑‍💻Jobs {#jobs}
@@ -126,7 +162,8 @@ Paris 75008 - 2j de TT/sem.
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [Partager son code entre des projets React et React Native sur un monorepo](https://dev.to/simonboisset/partager-son-code-entre-des-projets-react-et-react-native-sur-un-monorepo-3jl)
+- [Apprendre REACT.JS en 1 HEURE | Comprendre l'ESSENTIEL en 2022](https://www.youtube.com/watch?v=mLZDzZgoCC4)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -142,21 +179,31 @@ https://twitter.com/stackblitz/status/1579877383716319233
 
 https://thenewstack.io/stackblitz-launches-codeflow-and-announces-figma-investment/
 
+https://twitter.com/sebastienlorber/status/1580206198803922945
+
 [One-click treat for Open Source maintainers](https://dev.to/stackblitz/one-click-treat-for-open-source-maintainers-49f7)
 
 Node 18.11
+
+https://nodejs.org/en/blog/release/v18.11.0/
 
 https://twitter.com/simonplend/status/1580515663638142979
 
 https://twitter.com/matteocollina/status/1580911016506163202
 
+https://twitter.com/simonplend/status/1580515663638142979
+
 - [Fontaine - Automatic font fallback based on font metrics](https://github.com/unjs/fontaine) + https://twitter.com/danielcroe/status/1581428654479138817
 - [Obsidian 1.0](https://obsidian.md/1.0)
 - [rRPC-chrome - tRPC adapter for Web Extensions](https://github.com/jlalmes/trpc-chrome)
-- [Status update of my tsc port](https://kdy1.dev/posts/2022/10/tsc-port-status)
+- [Status update of my tsc port](https://kdy1.dev/posts/2022/10/tsc-port-status) + https://twitter.com/kdy1dev/status/1580552244964954112
 - [Lerna reborn — What’s new in v6?](https://blog.nrwl.io/lerna-reborn-whats-new-in-v6-10aec6e9091c)
+- [What’s new in Nx 15?](https://blog.nrwl.io/whats-new-in-nx-15-7e14e1ff282d)
 - [JetBrains Fleet - Public Preview](https://blog.jetbrains.com/fleet/2022/10/introducing-the-fleet-public-preview/)
 - [Import maps soon available in all browsers](https://twitter.com/sebastienlorber/status/1582024272788480000)
+
+- [Bun's, ViteConf talk](https://twitter.com/jarredsumner/status/1581427214691708929)
+- [What is pnpm? Is it really so fast and space-efficient?](https://dev.to/stackblitz/what-is-pnpm-and-is-it-really-so-fast-and-space-efficient-29la)
 
 ---
 
@@ -165,3 +212,19 @@ https://twitter.com/matteocollina/status/1580911016506163202
 https://twitter.com/manucorporat/status/1580191113352470528
 
 https://twitter.com/olafurw/status/1578704185809244160
+
+https://twitter.com/defaced/status/1581917941313830913
+
+https://twitter.com/supabase/status/1581308421240152064
+
+https://twitter.com/housecor/status/1581265437282607104
+
+https://twitter.com/markdalgleish/status/1580827326799310848
+
+https://twitter.com/ossia/status/1580418402727841793
+
+https://twitter.com/Swizec/status/1580339569458696192
+
++++++
+
+https://twitter.com/floydophone/status/1579990708513308672
