--- a/website/newsletter/220/index.mdx
+++ b/website/newsletter/220/index.mdx
@@ -49,7 +49,15 @@ You can [download it here](https://sizzy.co/?utm_campaign=newsletter&utm_source=
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+[![Chain React - The US React Native Conference - May 17-19 2023 Portland Oregon](/emails/issues/220/chainreact.jpg)](https://cr.infinite.red/?utm_source=react_hebdo)
+
+**[Chain React - The US React Native Conference - May 17-19 2023 Portland Oregon](https://cr.infinite.red/?utm_source=react_hebdo)**
+
+Chain React returning for the 4th annual premiere React Native conference in May of 2023. The best minds, companies, and partners you won't want to miss.
+
+- **Workshops | May 17, 2023** - We have three exciting workshops for all different skill levels! These exclusive workshops happen on May 17th at the official Speaker's hotel. There, you'll learn, mingle, and get direct access to experts.
+
+- **Conference | May 18-19, 2023** - Our main event! This is where companies announce big news, developers share secrets, and lifelong friendships are made. The main conference is never live-streamed.
 
 ---
 
