--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
@@ -87,11 +87,15 @@ https://twitter.com/storybookjs/status/1580579898896584704
 
 - [Satori + React-Three-Fiber demo](https://twitter.com/0xca0a/status/1581751380339232768) - [Satori + SVG code block syntax highlighting](https://twitter.com/shuding_/status/1581358324569645056)
 
+- [A little semantic HTML trick for React components](https://queen.raae.codes/emails/2022-10-10-semantic-react/)
+
 - [Moving From React to htmx](https://htmx.org/essays/a-real-world-react-to-htmx-port/) + https://twitter.com/htmx_org/status/1581316329818099712 + https://twitter.com/hn_frontpage/status/1581828152548282368
 
 - [Create a 3D site with Game Controls in Spline and React](https://designcode.io/spline2) ([video](https://www.youtube.com/watch?v=uYp_ipIasYE))
 
 - [Astro 1.5](https://twitter.com/astrodotbuild/status/1580611193429168129)
+
+- [SWR 2.0 RC](https://github.com/vercel/swr/releases/tag/2.0.0-rc.0)
 
 https://twitter.com/DavidKPiano/status/1580179833052876800 ?
 
@@ -201,9 +205,10 @@ https://twitter.com/simonplend/status/1580515663638142979
 - [What’s new in Nx 15?](https://blog.nrwl.io/whats-new-in-nx-15-7e14e1ff282d)
 - [JetBrains Fleet - Public Preview](https://blog.jetbrains.com/fleet/2022/10/introducing-the-fleet-public-preview/)
 - [Import maps soon available in all browsers](https://twitter.com/sebastienlorber/status/1582024272788480000)
-
 - [Bun's, ViteConf talk](https://twitter.com/jarredsumner/status/1581427214691708929)
 - [What is pnpm? Is it really so fast and space-efficient?](https://dev.to/stackblitz/what-is-pnpm-and-is-it-really-so-fast-and-space-efficient-29la)
+- [Intl Explorer - A tool for experimenting and trying out the ECMAScript Internationalization API](https://www.intl-explorer.com/)
+- [Why We Use Babylon.js Instead Of Three.js in 2022](https://www.spotvirtual.com/blog/why-we-use-babylonjs-instead-of-threejs-in-2022)
 
 ---
 
