--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
@@ -43,7 +43,7 @@ Vous pouvez le [télécharger ici](https://sizzy.co/?utm_campaign=newsletter&utm
 
 ## ⚛️ React {#react}
 
-[React RFC: First class support for promises and async/await](https://github.com/reactjs/rfcs/pull/229)
+**[React RFC: First class support for promises and async/await](https://github.com/reactjs/rfcs/pull/229)**
 
 - Remix naive: https://twitter.com/ebey_jacob/status/1581548418039963648
 
@@ -57,11 +57,11 @@ Vous pouvez le [télécharger ici](https://sizzy.co/?utm_campaign=newsletter&utm
 
 [They Fixed React ?](https://www.youtube.com/watch?v=iOpTdwf96NQ)
 
-[The Web’s Next Transition](https://www.epicweb.dev/the-webs-next-transition)
+**[The Web’s Next Transition](https://www.epicweb.dev/the-webs-next-transition)**
 
 https://twitter.com/kentcdodds/status/1580395678479814656
 
-[Storybook - First-class Vite support](https://storybook.js.org/blog/first-class-vite-support-in-storybook/)
+**[Storybook - First-class Vite support](https://storybook.js.org/blog/first-class-vite-support-in-storybook/)**
 
 v7 pre-release? https://twitter.com/IanVanSchooten/status/1579884486820782080
 
@@ -69,35 +69,26 @@ https://twitter.com/storybookjs/status/1580578832553488384
 
 https://twitter.com/storybookjs/status/1580579898896584704
 
-[A World-Class Code Playground with Sandpack](https://www.joshwcomeau.com/react/next-level-playground/)
+**[A World-Class Code Playground with Sandpack](https://www.joshwcomeau.com/react/next-level-playground/)**
 
-[Lazy-load React components in Remix](https://sergiodxa.com/articles/lazy-load-react-components-in-remix)
+Josh
 
-[Gatsby v5 beta?](https://twitter.com/GatsbyJS/status/1580288285229735936)
-
-- [Streaming: is it worth it?](https://www.builder.io/blog/streaming-is-it-worth-it)
-
-- [Docusaurus 2 is a pretty big deal](https://changelog.com/jsparty/247)
-
-- [Planby - React.js based component for schedules and timelines](https://planby.netlify.app/)
-
-- [In Defense of useEffect](https://www.youtube.com/watch?v=Zw4lJqBphvA)
-
-- [Streaming SSR in Preact prototype](https://twitter.com/marvinhagemeist/status/1581762567328104448)
-
-- [Satori + React-Three-Fiber demo](https://twitter.com/0xca0a/status/1581751380339232768) - [Satori + SVG code block syntax highlighting](https://twitter.com/shuding_/status/1581358324569645056)
-
-- [A little semantic HTML trick for React components](https://queen.raae.codes/emails/2022-10-10-semantic-react/)
-
-- [Moving From React to htmx](https://htmx.org/essays/a-real-world-react-to-htmx-port/) + https://twitter.com/htmx_org/status/1581316329818099712 + https://twitter.com/hn_frontpage/status/1581828152548282368
-
-- [Create a 3D site with Game Controls in Spline and React](https://designcode.io/spline2) ([video](https://www.youtube.com/watch?v=uYp_ipIasYE))
-
-- [Astro 1.5](https://twitter.com/astrodotbuild/status/1580611193429168129)
-
-- [SWR 2.0 RC](https://github.com/vercel/swr/releases/tag/2.0.0-rc.0)
-
-https://twitter.com/DavidKPiano/status/1580179833052876800 ?
+- 📜 [Lazy-load React components in Remix](https://sergiodxa.com/articles/lazy-load-react-components-in-remix)
+- 📜 [Prioritise content over components](https://www.simeongriggs.dev/components-considered-harmful-for-content)
+- 📜 [Streaming: is it worth it?](https://www.builder.io/blog/streaming-is-it-worth-it)
+- 📜 [A little semantic HTML trick for React components](https://queen.raae.codes/emails/2022-10-10-semantic-react/)
+- 📜 [Moving From React to htmx](https://htmx.org/essays/a-real-world-react-to-htmx-port/) + https://twitter.com/htmx_org/status/1581316329818099712 + https://twitter.com/hn_frontpage/status/1581828152548282368
+- 🧑‍🎓 [Create a 3D site with Game Controls in Spline and React](https://designcode.io/spline2) ([video](https://www.youtube.com/watch?v=uYp_ipIasYE))
+- 🎙️ [Docusaurus 2 is a pretty big deal](https://changelog.com/jsparty/247)
+- 🎥 [In Defense of useEffect](https://www.youtube.com/watch?v=Zw4lJqBphvA)
+- 🚧 [Streaming SSR in Preact prototype](https://twitter.com/marvinhagemeist/status/1581762567328104448)
+- 🎨 [Satori + React-Three-Fiber demo](https://twitter.com/0xca0a/status/1581751380339232768)
+- 🎨 [Satori + SVG code syntax highlighting demo](https://twitter.com/shuding_/status/1581358324569645056)
+- 📦 [Planby - React.js based component for schedules and timelines](https://planby.netlify.app/)
+- 📦 [Gatsby v5 beta](https://twitter.com/GatsbyJS/status/1580288285229735936)
+- 📦 [Astro 1.5](https://twitter.com/astrodotbuild/status/1580611193429168129)
+- 📦 [SWR 2.0 RC](https://github.com/vercel/swr/releases/tag/2.0.0-rc.0)
+- 🐦 [React tip: isFocused should almost never be a prop](https://twitter.com/DavidKPiano/status/1580179833052876800)
 
 <SubscribeFormEmbed />
 
@@ -125,21 +116,18 @@ N'hésitez pas à aller voir notre site [premieroctet.com](https://www.premieroc
 
 ## 📱 React-Native {#react-native}
 
-[2022: How can we improve React Native?](https://github.com/react-native-community/discussions-and-proposals/discussions/528)
+**[2022: How can we improve React Native?](https://github.com/react-native-community/discussions-and-proposals/discussions/528)**
 
 https://twitter.com/reactnative/status/1581313958836809729
 
-- [Metro 0.73.0](https://github.com/facebook/metro/releases/tag/v0.73.0)
-- [React-Native Flex gap support coming?](https://twitter.com/Baconbrix/status/1580587087174062080)
-- [Expo Router 0.0.27](https://twitter.com/Baconbrix/status/1579912795323215872) + https://twitter.com/Baconbrix/status/1579867430775848964
-
-Expo doc: https://twitter.com/amanhimself/status/1580615698321399811
-
-- [React-Native Bottom Sheet v5 will have web support](https://twitter.com/gorhom/status/1581334529121218561)
-- [RNR 248 - Introducing Ignite v8: Maverick!](https://reactnativeradio.com/episodes/rnr-248-introducing-ignite-v8-maverick)
-- [React-Native 0.70.3](https://twitter.com/Kelset/status/1580210635266084864)
-
-https://twitter.com/mironcatalin/status/1580111626430468097
+- 💬 [Restructuring React Native's Public API](https://github.com/react-native-community/discussions-and-proposals/discussions/523)
+- 🚧 [Expo Router 0.0.27](https://twitter.com/Baconbrix/status/1579912795323215872) + https://twitter.com/Baconbrix/status/1579867430775848964 + [Layout API change RFC](https://twitter.com/Baconbrix/status/1582057133939384321)
+- 🚧 [React-Native Bottom Sheet v5 will have web support](https://twitter.com/gorhom/status/1581334529121218561)
+- 🚧 [React-Native Flex gap support coming?](https://twitter.com/Baconbrix/status/1580587087174062080)
+- 📖 [Expo docs improvements](https://twitter.com/amanhimself/status/1580615698321399811): "Running E2E tests on EAS Build now works on Android"
+- 📦 [Metro 0.73.0](https://github.com/facebook/metro/releases/tag/v0.73.0)
+- 📦 [React-Native 0.70.3](https://twitter.com/Kelset/status/1580210635266084864)
+- 🎙️ [React-Native-Radio 248 - Introducing Ignite v8: Maverick!](https://reactnativeradio.com/episodes/rnr-248-introducing-ignite-v8-maverick)
 
 ---
 
@@ -198,9 +186,13 @@ https://twitter.com/matteocollina/status/1580911016506163202
 https://twitter.com/simonplend/status/1580515663638142979
 
 - [Fontaine - Automatic font fallback based on font metrics](https://github.com/unjs/fontaine) + https://twitter.com/danielcroe/status/1581428654479138817
+- [Unplugin - Unified plugin system for Vite, Rollup, Webpack, and more](https://github.com/unjs/unplugin)
+- [Rollup v3](https://github.com/rollup/rollup/releases/tag/v3.0.0)
+- [Evan You - How Vite Came to Be - ViteConf 2022 slides](https://docs.google.com/presentation/d/1O09rAOu_wRLHVjukVbBeSlRkLeX-dcYZfsdjPiU4kGQ/edit#slide=id.p)
 - [Obsidian 1.0](https://obsidian.md/1.0)
 - [rRPC-chrome - tRPC adapter for Web Extensions](https://github.com/jlalmes/trpc-chrome)
-- [Status update of my tsc port](https://kdy1.dev/posts/2022/10/tsc-port-status) + https://twitter.com/kdy1dev/status/1580552244964954112
+- [Status update of my tsc port](https://kdy1.dev/posts/2022/10/tsc-port-status) + https://twitter.com/kdy1dev/status/1580552244964954112 + https://twitter.com/kdy1dev/status/1582174891230760960
+- [TypeRunner - High-performance TypeScript compiler](https://github.com/marcj/TypeRunner)
 - [Lerna reborn — What’s new in v6?](https://blog.nrwl.io/lerna-reborn-whats-new-in-v6-10aec6e9091c)
 - [What’s new in Nx 15?](https://blog.nrwl.io/whats-new-in-nx-15-7e14e1ff282d)
 - [JetBrains Fleet - Public Preview](https://blog.jetbrains.com/fleet/2022/10/introducing-the-fleet-public-preview/)
@@ -229,6 +221,8 @@ https://twitter.com/markdalgleish/status/1580827326799310848
 https://twitter.com/ossia/status/1580418402727841793
 
 https://twitter.com/Swizec/status/1580339569458696192
+
+https://twitter.com/svgeesus/status/1582142663398420480
 
 +++++
 
